--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -4,49 +4,66 @@ $color_3: #000000;
 $background-color_1: #515151;
 
 //extend de encabezados
-%encabezado_quines_s{
+%encabezado {
+    background-color: #515151;
     display: flex;
-
-    align-items: center;
     justify-content: space-between;
+    padding: 10px 10px;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+
+    .encabezado a {
+        background-color: #515151;
+    }
+}
+
+.logo_header {
+    width: 80px;
+    height: 80px;
+    margin-left: 30px;
     background-color: $background-color_1;
-    padding: 20px;
+}
 
-    img{
-        width: 150px;
-        height: 150px;
-        align-content: center;
-    }
-
-.regreso_inicio{
-    border: none;
-    background-color: inherit;
-    padding: 14px 28px;
-    font-size: 23px;
-    transition: 1s;
-    margin-right: 50px;
-
-    a{
-        color: $color_1;
+.menu {
+    list-style-type: none;
+    display: flex;
+    margin-right: 30px;
+    gap: 36px;
+    background-color: $background-color_1;
+    flex-wrap: wrap;
+    
+    .menu_item a {
         text-decoration: none;
+        display: flex;
+        color: $color_1;
+        font-size: 16px;
+        background-color: $background-color_1;
     }
+}
 
-        &:hover{
-            transform: scale(1.2);
-        }
+.menu_item {
+    transform: 1s;
+
+    &:hover {
+        transform: scale(1.4);
     }
 }
 
 .encabezado_reserva{
-    @extend %encabezado_quines_s;
+    @extend %encabezado;
 }
 
 .encabezado_registrarse{
-    @extend %encabezado_quines_s;
+    @extend %encabezado;
 }
 
-.encabezado_login{
-    @extend %encabezado_quines_s;
+.encabezado_quines_s{
+    @extend %encabezado;
+}
+
+.encabezado_restaurantes{
+    @extend %encabezado;
 }
 
 
@@ -71,5 +88,9 @@ $background-color_1: #515151;
 }
 
 .footer_reserva{
+    @extend %logo_quien_s;
+}
+
+.footer_restaurante{
     @extend %logo_quien_s;
 }
