--- a/style/style.scss
+++ b/style/style.scss
@@ -4,7 +4,10 @@
 @import "../style/pagina_principal.scss";
 @import "../style/quienes_somos.scss";
 @import "../style/tu_reserva.scss";
+@import "../style/restaurantes";
 @import "../style/registrarse";
+
 
 @import "../style/media_q_index";
 @import "../style/media_q_reserva";
+@import "../style/media_restaurantes";
