--- a/style/_media_q_reserva.scss
+++ b/style/_media_q_reserva.scss
@@ -1,38 +1,48 @@
-.slider_reserva{
-    margin: 80px 12px;
-}
 
-.reservacion{
-    background-image: url(../multimedia/fondo.jpg);
-    background-size: cover;
-    border-radius: 4px;
-    font-size: 14px;
-    padding: 20px;
-    color: $color_1;
-    margin: 0 auto;
-    width: 330px;
-    margin-bottom: 130px;
-
-    img{
-		border-radius: 50%;
-        margin: 0 auto;
-        margin-left: 40px;
-		width: 180px;
+@media screen and (max-width: 768px){
+    .slider_reserva{
+        margin: 80px 12px;
     }
 
-    button{
+    .reservacion{
+        background-image: url(../multimedia/fondo.jpg);
+        background-size: cover;
+        border-radius: 4px;
         font-size: 14px;
-        color: $color_3;
-        border: 0;
-        outline: none;
-        width: 300px;
-        padding: 10px;
-        margin-bottom: 10px;
-        text-align: center;
-        transition: 1s;
+        padding: 20px;
+        color: $color_1;
+        margin: 0 auto;
+        width: 330px;
+        margin-bottom: 130px;
 
-        &:hover{
-            transform: scale(0.9);
+        img{
+    		border-radius: 50%;
+            margin: 0 auto;
+            margin-left: 40px;
+    		width: 180px;
+        }
+
+        button{
+            font-size: 14px;
+            color: $color_3;
+            border: 0;
+            outline: none;
+            width: 300px;
+            padding: 10px;
+            margin-bottom: 10px;
+            text-align: center;
+            transition: 1s;
+
+            &:hover{
+                transform: scale(0.9);
+            }
         }
     }
+}
+
+@media screen and (max-width: 378px) {
+    .reservacion{
+        width: 800px;
+        margin: 10px 20px 10px 20px;
+    } 
 }
