--- a/style/_media_restaurantes.scss
+++ b/style/_media_restaurantes.scss
@@ -11,6 +11,50 @@
     }
 }
 
+@media screen and (max-width: 413px){
+    .card_restaurantes_2{
+        display: grid;
+
+        grid-template-columns: 1fr 1fr;
+        align-content: center;
+        gap: 20px;
+        margin: 40px 10px 40px 10px;
+
+        .card_rest{
+            .img_card_res{
+                width: 100%;
+                border-radius: 6px;
+            }
+
+            h4{
+                font-size: 15px;
+            }
+
+            h5{
+                font-size: 12px;
+            }
+
+            .telefono_card_rest{
+                width: 15px;
+            }
+
+            .nume_rest{
+                display: none;
+            }
+
+            .reacciones{
+                display: flex;
+                justify-content: center;
+                gap: 10px;
+                .reaccion_sevicio{
+                    width: 15%;
+                    margin-top: 10px;
+                }
+            } 
+        }
+    }
+}
+
 @media screen and (max-width: 378px){
     .card_restaurantes_2{
         display: grid;
