--- a/style/style.css
+++ b/style/style.css
@@ -637,6 +637,40 @@ h2 {
     gap: 60px;
   }
 }
+@media screen and (max-width: 413px) {
+  .card_restaurantes_2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    gap: 20px;
+    margin: 40px 10px 40px 10px;
+  }
+  .card_restaurantes_2 .card_rest .img_card_res {
+    width: 100%;
+    border-radius: 6px;
+  }
+  .card_restaurantes_2 .card_rest h4 {
+    font-size: 15px;
+  }
+  .card_restaurantes_2 .card_rest h5 {
+    font-size: 12px;
+  }
+  .card_restaurantes_2 .card_rest .telefono_card_rest {
+    width: 15px;
+  }
+  .card_restaurantes_2 .card_rest .nume_rest {
+    display: none;
+  }
+  .card_restaurantes_2 .card_rest .reacciones {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  .card_restaurantes_2 .card_rest .reacciones .reaccion_sevicio {
+    width: 15%;
+    margin-top: 10px;
+  }
+}
 @media screen and (max-width: 378px) {
   .card_restaurantes_2 {
     display: grid;
